# fair-squares

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  crates.js  customSpec.json  docker-compose.yml  fs-spec.json  help.html  index.html  raw.json  rust-toolchain  search-index.js  settings.html  source-files.js
.devcontainer/: devcontainer.json
artifacts/: api.rs  metadata.scale
assets/: frame-weight-template.hbs
assets/pallet_template/: Cargo.toml
assets/pallet_template/src/: lib.rs  mock.rs  weights.rs
chainspecs/: squareOne.json  squareOneRaw.json
common/anmol-utils/: Cargo.toml
common/anmol-utils/src/: lib.rs
fs-dapp_2.0/: .prettierrc.json  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
fs_node/: all.html  index.html
fs_node_runtime/: all.html  constant.BABE_GENESIS_EPOCH_CONFIG.html  constant.EXISTENTIAL_DEPOSIT.html  constant.MINER_MAX_ITERATIONS.html  constant.VERSION.html  constant.WASM_BINARY.html  constant.WASM_BINARY_BLOATY.html  constant.WEIGHT_PER_SECOND.html  enum.BalancesCall.html  enum.Call.html  enum.DispatchClass.html  enum.Event.html  enum.MultiSignature.html  enum.OriginCaller.html  enum.StakerStatus.html  enum.SystemCall.html  enum.TimestampCall.html  enum.TransactionSource.html  fn.native_version.html  index.html  macro.construct_runtime.html  macro.create_runtime_str.html  macro.impl_opaque_keys.html  macro.parameter_types.html  sidebar-items.js  struct.AccountIdLookup.html  struct.ApprovalDeposit.html  struct.AsEnsureOriginWithArg.html  struct.AssetDeposit.html  struct.AssetsFees.html  struct.AttributeDepositBase.html  struct.BalanceToU256.html  struct.BasicDeposit.html  struct.BetterUnsignedThreshold.html  struct.BlakeTwo256.html  struct.BlockExecutionWeight.html  struct.BlockHashCount.html  struct.BondingDuration.html  struct.Burn.html  struct.CancelBufferBlockLength.html  (+239 more)
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
pallet_asset_management/: all.html  constant.MAX_MODULE_ERROR_ENCODED_SIZE.html  derive.CloneNoBound.html  derive.DebugNoBound.html  derive.Decode.html  derive.Encode.html  derive.EqNoBound.html  derive.MaxEncodedLen.html  derive.PartialEqNoBound.html  derive.RuntimeDebug.html  derive.RuntimeDebugNoBound.html  derive.TypeInfo.html  enum.BalanceTypes.html  enum.DispatchClass.html  enum.DispatchError.html  enum.ExistenceRequirement.html  enum.InvalidTransaction.html  enum.Pays.html  enum.RawOrigin.html  enum.TransactionSource.html  enum.TransactionValidityError.html  enum.UnknownTransaction.html  enum.VoteProposals.html  enum.VoteResult.html  fn.ensure_none.html  fn.ensure_root.html  fn.ensure_signed.html  fn.ensure_signed_or_root.html  index.html  macro.assert_ok.html  macro.ensure.html  macro.vec.html  sidebar-items.js  struct.BadOrigin.html  struct.BalanceType.html  struct.Blake2_128.html  struct.Blake2_128Concat.html  struct.Blake2_256.html  struct.BlakeTwo256.html  struct.BoundedVec.html  (+80 more)
pallet_bidding/: all.html  index.html  sidebar-items.js  struct.Percent.html  struct.Vec.html  trait.Currency.html  trait.ReservableCurrency.html  trait.Zero.html  type.AccountIdOf.html  type.BalanceOf.html  type.BlockNumberOf.html
pallet_finalizer/: all.html  index.html  sidebar-items.js  struct.Vec.html
pallet_housing_fund/: all.html  attr.transactional.html  constant.MAX_MODULE_ERROR_ENCODED_SIZE.html  derive.CloneNoBound.html  derive.DebugNoBound.html  derive.Decode.html  derive.Encode.html  derive.EqNoBound.html  (+91 more)
pallets/Onboarding/: Cargo.toml
pallets/Onboarding/src/: functions.rs  lib.rs  types.rs
pallets/asset_management/: Cargo.toml  README.md
pallets/asset_management/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/bidding/: Cargo.toml  README.md
pallets/bidding/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  structs.rs  tests.rs  types.rs  weights.rs
pallets/biding/: Cargo.toml
pallets/biding/src/: mock.rs  tests.rs
pallets/council/: Cargo.toml
pallets/council/src/: functions.rs  lib.rs  types.rs
pallets/estate-asset/: Cargo.toml
pallets/estate-asset/src/: lib.rs
pallets/finalizer/: Cargo.toml  README.md
pallets/finalizer/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/housing_fund/: Cargo.toml  README.md
pallets/housing_fund/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  structs.rs  tests.rs  types.rs  weights.rs
pallets/nft/: Cargo.toml  README.md
pallets/nft/src/: benchmarking.rs  functions.rs  impl_nonfungibles.rs  lib.rs  merkle_proof.rs  mock.rs  test.rs  tests.rs  types.rs  weights.rs
pallets/offchain-worker-recheck/: Cargo.toml  README.md
pallets/offchain-worker-recheck/src/: lib.rs
pallets/onboarding/: Cargo.toml  README.md
pallets/onboarding/src/: benchmarking.rs  functions.rs  items.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/payment/: Cargo.toml  README.md
pallets/payment/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/roles/: Cargo.toml  README.md
pallets/roles/src/: benchmarking.rs  frame-weight-template.hbs  functions.rs  helpers.rs  items.rs  lib.rs  mock.rs  structs.rs  tests.rs  types.rs  weights.rs  weights.rs_0  weights.rs_template
pallets/share_distributor/: Cargo.toml  README.md
pallets/share_distributor/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/template/: Cargo.toml
pallets/template/src/: functions.rs  helpers.rs  items.rs  lib.rs  mock.rs  roles.rs  tests.rs  weights.rs
pallets/template/src/roles/: items.rs  mod.rs
pallets/tenancy/: Cargo.toml  README.md
pallets/tenancy/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/voting/: Cargo.toml  README.md
pallets/voting/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  structs.rs  tests.rs  types.rs
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: adapter.rs  lib.rs  locked_balance.rs  wbalances.rs  wnft.rs
runtime/src/: constants.rs  lib.rs
(+3688 files in other folders)
