[package]
name = "fs-node"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Fair Squares"]
homepage = "https://fair-squares.nl"
edition = "2021"
license = "Apache 2.0"
publish = false
repository = "https://github.com/Fair-Squares/fair-squares"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "fs-node"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"]}
hex-literal = "0.2.1"

sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-telemetry = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-transaction-pool = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-transaction-pool-api = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-offchain = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-statement-store = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-consensus-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-consensus-grandpa = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-client-api = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-timestamp = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-inherents = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-keyring = { version = "24.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
frame-system = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
pallet-transaction-payment = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sp-api = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-blockchain = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sp-block-builder = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
substrate-frame-rpc-system = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
frame-benchmarking-cli = {  git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }

# Local Dependencies
fs-node-runtime = {  path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"fs-node-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["fs-node-runtime/try-runtime", "try-runtime-cli/try-runtime"]
