[package]
name = "fs-node-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Fair Squares"]
homepage = "https://fair-squares.nl"
edition = "2021"
license = "Apache 2.0"
publish = false
repository = "https://github.com/Fair-Squares/fair-squares"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", optional = true , branch = "master" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-consensus-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-version = { version = "22.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

pallet-utility = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
node-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }
pallet-uniques = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-collective = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-democracy = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-treasury = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-scheduler = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-preimage = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-assets = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-identity = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-nfts = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-nfts-runtime-api = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-indices = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }
pallet-asset-rate = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk",  branch = "master", default-features = false }

sp-storage = { version = "13.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk",  branch = "master" }


# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev",git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = {   version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/polkadot-sdk", optional = true ,  branch = "master" }
frame-system-benchmarking = {   version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/polkadot-sdk", optional = true ,  branch = "master" }

# Local Dependencies
pallet-roles = { version = "4.0.0-dev", default-features = false, path = "../pallets/roles" }
pallet-housing_fund = { version = "4.0.0-dev", default-features = false, path = "../pallets/housing_fund" }
pallet-nft = { version = "4.0.0-dev", default-features = false, path = "../pallets/nft" }
pallet-onboarding = { version = "4.0.0-dev", default-features = false, path = "../pallets/onboarding" }
pallet-council = { version = "4.0.0-dev", default-features = false, path = "../pallets/council" }
pallet-finalizer = { version = "4.0.0-dev", default-features = false, path = "../pallets/finalizer" }
pallet-share_distributor = { version = "4.0.0-dev", default-features = false, path = "../pallets/share_distributor" }
pallet-bidding = { version = "4.0.0-dev", default-features = false, path = "../pallets/bidding" }
pallet-asset_management = { version = "4.0.0-dev", default-features = false, path = "../pallets/asset_management" }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk", optional = true ,  branch = "master" }

[features]
default = ["std"]
std = [
	"frame-try-runtime?/std",
	"frame-system-benchmarking?/std",
	"frame-benchmarking?/std",
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"pallet-asset-rate/std",
	"pallet-indices/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"pallet-nft/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-genesis-builder/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"pallet-roles/std",
	"pallet-asset_management/std",
	"pallet-finalizer/std",
	"pallet-onboarding/std",
	"pallet-collective/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-treasury/std",
	"pallet-identity/std",
	"pallet-utility/std",
	"pallet-democracy/std",
	"pallet-uniques/std",
	"pallet-assets/std",
	"pallet-nfts/std",
	"pallet-nfts-runtime-api/std",
	"pallet-share_distributor/std",
	"pallet-bidding/std",
	"pallet-insecure-randomness-collective-flip/std",
	### add new std
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-nft/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-roles/runtime-benchmarks",
	"pallet-finalizer/runtime-benchmarks",
	"pallet-onboarding/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"frame-system-benchmarking?/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-share_distributor/runtime-benchmarks",
	"pallet-bidding/runtime-benchmarks",
	### add new runtime-benchmarks
]
try-runtime = [
	"frame-try-runtime/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-asset-rate/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-roles/try-runtime",
	"pallet-finalizer/try-runtime",
	"pallet-onboarding/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-uniques/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-nfts/try-runtime",
	"pallet-share_distributor/try-runtime",
	"pallet-bidding/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",

	### add new try-runtime
]
